finalizing v1.4 of internal note and 1.2 of publication draft

--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -37,7 +37,7 @@
 
 \abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of neutrino physics. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. 
 %The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino energy of about 0.7 GeV. 
-We discuss a technique for measuring a charged particle's momentum by means of multiple coulomb scattering (MCS) in the MicroBooNE LArTPC, which does not require the full particle ionization track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). We provide motivation for why this technique is important, and quantify its performance on fully contained beam-neutrino-induced muon tracks both in simulation and in data. In general we find agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 12\% for the shortest (one meter long) tracks to nearly 5\% for longer (several meter) tracks.}
+We discuss a technique for measuring a charged particle's momentum by means of multiple coulomb scattering (MCS) in the MicroBooNE LArTPC, which does not require the full particle ionization track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). We provide motivation for why this technique is important, and quantify its performance on fully contained beam-neutrino-induced muon tracks both in simulation and in data. In general we find agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 12\% for the shortest (one meter long) tracks to nearly 5\% for longer (several meter) tracks. Quantification of the performance on exiting tracks, or tracks which are higher energy than those which are fully contained, will be determined in a future publication.}
 
 
 % \keywords{Only keywords from JINST's keywords list please}
@@ -79,6 +79,11 @@ A set of 32 photomultiplier tubes (PMTs) and three wire planes with 3 mm spacing
 
 The Booster Neutrino Beam (BNB) is predominantly composed of muon neutrinos ($\nu_\mu$) with a peak neutrino energy of about 0.7 GeV, which can undergo charge-current ($\nu_\mu$CC) interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate their momentum with a measurement of the length of the particle's track, or with calorimetric measurements which come from wire signal measurements. However, around half of muons from BNB neutrino events in MicroBooNE are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of a non-contained three-dimensional track is by means of multiple coulomb scattering (MCS). \\
 
+In this paper we describe the theory behind multiple coulomb scattering and a maximum likelihood based algorithm that is used to determine the momentum of particles in a LArTPC. That this technique works and is valid for a sample of fully contained muons from BNB $\nu_\mu$CC interactions is demonstrated, with bias and resolutions quantified. Quantification of the performance on exiting tracks, or tracks which are higher energy than those which are fully contained, will be determined in a future publication.
+
+
+\section{Multiple Coulomb Scattering (MCS)}
+
 Multiple Coulomb Scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the angular deflection scatters of a particle in either the $x'$ direction or $y'$ direction (as indicated in the aforementioned figure) form a gaussian distribution centered at zero with a width, $\sigma_o^{HL}$ given by the Highland formula \cite{highland}: 
 
 \begin{equation}\label{highland_eqtn}
@@ -92,7 +97,7 @@ Multiple Coulomb Scattering (MCS) occurs when a charged particle enters a medium
 where the formula is ``modified'' from the original Highland formula (Equation \ref{highland_eqtn}) in that it includes a detector-inherent angular resolution term, $\sigma_o^{res}$. For this analysis, this term is given a fixed value of 2 mrad which has been determined to be an acceptable value based on simulation studies.\\
 
 
-With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric or track range information. The method by which this is done is described in detail in Section \ref{MCS_technique_section} and was originally described for use in a LArTPC on atmospheric muons by the ICARUS collaboration\cite{icarus_mcs_paper}.
+With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric or track range information. The maximum-likelihood based method by which this is done is described in detail in Section \ref{MCS_technique_section}, though the original method for using MCS to determine particle momentum in a LArTPC involved using a Kalman Filter and was originally described by the ICARUS collaboration \cite{icarus_mcs_paper}.
 
 \begin{figure}[ht!]
 \centering
@@ -301,7 +306,7 @@ The MCS momentum versus range-based momentum for this sample of 396 tracks can b
 
 
 
-The MCS momentum fractional bias and resolution as a function of range-based momentum for this sample of 396 tracks is shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. In order to compute this bias and resolution, distributions of fractional inverse momentum difference ($\frac{p_{MCS}^{-1} - p_{Range}^{-1}}{p_{Range}^{-1}}$) in bins of range-based momentum $p_{Range}$ are fit to gaussians and the mean of the fit determines the bias while the width of the fit determines the resolution for that bin. Inverse momentum is used here because the binned distributions are more gaussian, and therefore using the resulting fit parameters is more valid. Note that simply using the mean and RMS of the binned distributions yields similar results. Also shown in this figure are the bias and resolutions for an analogous simulated sample consisting of full BNB simulation with CORSIKA-generated\cite{corsika_ref} cosmic overlays passed through an identical reconstruction and event selection chain. Rather than hand scanning this sample, truth-based information was used by requiring the longest reconstructed track matched well in terms of true starting and stopping point of the $\nu_\mu$CC muon. These resolutions on the order of 10\% are consistent with the monte-carlo Kalman filter results presented by the ICARUS collaboration in this momentum range\cite{icarus_mcs_paper}.\\
+The MCS momentum fractional bias and resolution as a function of range-based momentum for this sample of 396 tracks is shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. In order to compute this bias and resolution, distributions of fractional inverse momentum difference ($\frac{p_{MCS}^{-1} - p_{Range}^{-1}}{p_{Range}^{-1}}$) in bins of range-based momentum $p_{Range}$ are fit to gaussians and the mean of the fit determines the bias while the width of the fit determines the resolution for that bin. Inverse momentum is used here because the binned distributions are more gaussian (since the Highland formula is a function of inverse momentum), and therefore using the resulting fit parameters is more valid. Note that simply using the mean and RMS of the binned distributions yields similar results. Also shown in this figure are the bias and resolutions for an analogous simulated sample consisting of full BNB simulation with CORSIKA-generated\cite{corsika_ref} cosmic overlays passed through an identical reconstruction and event selection chain. Rather than hand scanning this sample, truth-based information was used by requiring the longest reconstructed track matched well in terms of true starting and stopping point of the $\nu_\mu$CC muon. These resolutions on the order of 10\% are consistent with the monte-carlo Kalman filter results presented by the ICARUS collaboration in this momentum range\cite{icarus_mcs_paper}.\\
 
 
 \begin{figure}
