--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \input{./Tex/global_vars.tex}
 
 \section{Note Message and Content Overview}
-This is a technote internal to the MicroBooNE collaboration quantifying the performance of the Multiple Coulomb Scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. This note is a demonstration of performance but is not an end-all inclusive study on the algorithm and subsequently has limited scope. At the end of this note are some suggestions for future analyses which have not been done yet. \textit{The message of this note is simply ``MicroBooNE has demonstrated that it's likelihood-based MCS method for measuring muon momenta works specifically on contained tracks from BNB neutrinos. We describe how the method works, and we quantify how well it works.''}\\
+This is a technote internal to the MicroBooNE collaboration quantifying the performance of the Multiple Coulomb Scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. This note is a demonstration of performance but is not an end-all inclusive study on the algorithm and subsequently has limited scope. At the end of this note are some suggestions for future analyses which have not been done yet. \textit{The message of this note is simply ``MicroBooNE has demonstrated that its likelihood-based MCS method for measuring muon momenta works specifically on contained tracks from BNB neutrinos. We describe how the method works, and we quantify how well it works.''}\\
 
 Ideally this analysis will lead to a publication in a journal like JINST, which will also have a limited scope. A list of potential plots to be included in the publication can be found at the end of this note, in Section \ref{publicplots_section}.\\
 
